fix features alignment

--- a/front/src/css/home.module.css
+++ b/front/src/css/home.module.css
@@ -30,7 +30,6 @@
 
 .features {
     display: flex;
-    align-items: center;
 }
 
 @media (min-width: 920px) {
